Get rid of SQL joins during the aggregation process